--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  background: linear-gradient(180deg, hsla(0, 0%, 99%, 1) 0%, hsla(0, 0%, 96%, 1) 100%);
+  background: #fff;
   color: var(--white);
 }
 
