--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -33,6 +33,10 @@ body, input, textarea, select, button {
   font: 400 1rem "Poppins", sans-serif;
 }
 
+div.mainContainer {
+  padding: 0 2rem;
+}
+
 h1,h2,h3,h4,h5,h6, strong {
   font-weight: bold;
 }
