feat: create myDocument to preset head tag and update font-family

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -30,7 +30,7 @@ body {
 }
 
 body, input, textarea, select, button {
-  font: 400 1rem "Poppins", sans-serif;
+  font: 400 1rem "Nunito sans", sans-serif;
 }
 
 div.mainContainer {
