feat: updated link into mainPage and add breadcrumb into product list Container

--- a/src/components/ProductList/styles.module.scss
+++ b/src/components/ProductList/styles.module.scss
@@ -1,6 +1,7 @@
 main.container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   width: 100%;
   padding: 3rem 0;
 }
@@ -11,6 +12,7 @@ div.content {
   gap: 1.75rem 1rem;
   width: 100%;
   max-width: 1024px;
+  margin: 0 auto;
 }
 
 div.productContainer {
