--- a/src/components/MyCartPage/styles.module.scss
+++ b/src/components/MyCartPage/styles.module.scss
@@ -8,9 +8,146 @@ main.container {
 
 div.content {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: 1fr;
   gap: 1.75rem 1rem;
   width: 100%;
   max-width: 1024px;
   margin: 0 auto;
+}
+
+div.cartItemContainer {
+  display: flex;
+  height: 5rem;
+  width: 100%;
+  gap: 2rem;
+  padding: 0 2rem;
+}
+
+div.cartItemInformation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  flex: 1;
+}
+
+div.cartItemDescription {
+  display: flex;
+  flex-direction: column;
+  gap: .25rem;
+}
+
+strong.cartItemTitle {
+  font-size: 22px;
+}
+
+span.cartItemSizeProp {
+  font-size: 14px;
+}
+
+span.cartItemColorProp {
+  font-size: 14px;
+}
+
+div.cartItemProperties {
+  display: flex;
+  gap: 1rem;
+}
+
+div.cartItemAction {
+  display: flex;
+  gap: 2rem;
+}
+
+div.cartItemQuantity,
+div.cartItemButtons {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+div.cartItemQuantityInputContainer {
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+}
+
+input.cartItemQuantityInput {
+  width: 3rem;
+  height: 2.5rem;
+  padding: .5rem;
+  border: 1px solid #606060;
+  outline: none;
+  text-align: center;
+
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+}
+
+button.cartItemQuantityInputMinus,
+button.cartItemQuantityInputPlus {
+  width: 1.75rem;
+  height: 1.75rem;
+  background: #171717;
+  color: #fff;
+  border: none;
+  outline: none;
+  border-radius: 100%;
+  transition: .4s background;
+
+  &:hover {
+    background: #4f4f4f;
+  }
+}
+
+span.cartItemQuantityPrice {
+  font-size: 1.2rem;
+}
+
+button.cartItemBtn {
+  padding: .5rem 1rem;
+  border: 1px solid #171717;
+  background: transparent;
+  color: #171717;
+  font-weight: 600;
+  transition: .5s background, .5s color;
+
+  &:hover {
+    background: #171717;
+    color: #fff;
+  }
+}
+
+div.cartItemActionCart {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+button.cartItemActionCartPayment {
+  border: 1px solid #171717;
+  background: transparent;
+  font-weight: 700;
+  padding: 1rem 2rem;
+  transition: .5s background, .5s color;
+
+  &:hover {
+    background: #171717;
+    color: #fff;
+  }
+}
+
+button.cartItemActionCartCancel {
+  border: 1px solid #171717;
+  background: #171717;
+  color: #fff;
+  font-weight: 700;
+  padding: 1rem 2rem;
+  transition: .5s background, .5s color;
+
+  &:hover {
+    background: #4f4f4f;
+  }
 }
