feat: add my order page and my profile page created and styled my order page updated mt profile page fix folder PageProfile to get all routes page

--- a/src/components/PageProfile/MyProfile/styles.module.scss
+++ b/src/components/PageProfile/MyProfile/styles.module.scss
@@ -17,14 +17,20 @@ div.content {
 }
 
 li.navBtn {
-  color: #666;
+  color: #8e8d8d;
   cursor: pointer;
+  transition: .2s color;
+
+  &:hover {
+    color: #333333;
+  }
 }
 
 li.navActive {
   cursor: pointer;
   font-weight: 700;
   color: #171717;
+  transition: .2s color;
 
   &:hover {
     color: #000;
@@ -32,6 +38,7 @@ li.navActive {
 }
 
 div.ProfileContainer {
+  width: 95%;
   display: grid;
   grid-template-columns: 1fr 3fr;
 }
