--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -35,6 +35,7 @@ body, input, textarea, select, button {
 
 div.mainContainer {
   padding: 0 2rem;
+  height: 100vh;
 }
 
 h1,h2,h3,h4,h5,h6, strong {
